# raft-experiment

./: Cargo.toml  README.md  build.rs
schema/: messages.capnp
src/: common.rs  consensus.rs  consensus_lib.rs  consensus_shared.rs  consensus_types.rs  error.rs  lib.rs  main.rs  messages.rs  server.rs  smartconn.rs  state.rs  state_future.rs
src/persistent_log/: fs.rs  mem.rs  mod.rs
